<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Luper</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="weekly">Weekly --</string>
    <string name="monthly">Monthly --</string>
    <string name="quarterly">Quarterly --</string>
    <string name="halfyear">6 Months --</string>
    <string name="yearly">Yearly --</string>
    <string name="siteurl">http://luperapp.com</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="addressbook">Address Book</string>
    <string name="last_contact_date">Last Contact Date</string>
    <string name="next_contact_date">Next Contact Date</string>
    <string name="save">Save</string>
    <string name="title_activity_contact_detials">Contact Detials</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_notes">Notes</string>
    <string name="custom">Custom --</string>

</resources>