<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="30dp"
        android:scaleType="fitXY"
        android:src="@drawable/icon_big"
        android:contentDescription="@string/app_name"
        />
    	

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="55sp"
        android:textStyle="bold" >
    </TextView>
    
    <Button
        android:id="@+id/TextViewUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siteurl"
        android:layout_marginTop="50dp"
        android:textColor="#fff"
        android:textSize="25sp"
        android:background="#000"
        >
    </Button>
    
    <Button
        android:id="@+id/BtnOK"
        android:background="@drawable/normal_btn_selector"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/ok"
        android:textColor="#fff"
        android:scaleType="fitXY"
        android:textSize="20sp"
        android:contentDescription="@string/ok"
        >
    </Button>

</LinearLayout>
